--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -6,4 +6,8 @@ dependencies {
     implementation (name: 'WirelessP2p-release', ext:'aar')
     implementation (name: 'tfod-release', ext:'aar')
     implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+    implementation 'com.acmerobotics.roadrunner:core:0.4.5'
+    implementation 'org.openftc:rev-extensions-2:1.2'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.3.4'
 }
