Programming Bot Initial
- Add Road Runner
- Add FTC Dashboard
- Video processing
- Add logic for rough Auto

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,4 +19,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dependencies {
+        implementation 'org.openftc:rev-extensions-2:1.2'
+    }
 }
